Implement features for the admin app
