# docs/swagger.yaml
@@ -84,6 +84,18 @@ paths:
           schema:
             type: integer
           description: The legacy id.
+        - in: query
+          name: userId
+          required: false
+          schema:
+            type: string
+          description: The comma separated list of user ids
+        - in: query
+          name: title
+          required: false
+          schema:
+            type: string
+          description: The search string
 
       responses:
         '200':
@@ -450,6 +462,217 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /terms/:termsOfUseId/users:
+    get:
+      tags:
+        - TermsOfUse
+      description: |
+        List users who signed a term
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: termsOfUseId
+          description: The id of terms of use
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    userId:
+                      type: string
+          headers:
+            X-Next-Page:
+              schema:
+                type: integer
+                description: The index of the next page
+            X-Page:
+              schema:
+                type: integer
+                description: The index of the current page (starting at 1)
+            X-Per-Page:
+              schema:
+                type: integer
+                description: The number of items to list per page
+            X-Prev-Page:
+              schema:
+                type: integer
+                description: The index of the previous page
+            X-Total:
+              schema:
+                type: integer
+                description: The total number of items
+            X-Total-Pages:
+              schema:
+                type: integer
+                description: The total number of pages
+            Link:
+              schema:
+                type: string
+                description: Pagination link header.
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Not authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    post:
+      tags:
+        - TermsOfUse
+      description: |
+        Sign a term of use for a user
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: termsOfUseId
+          description: The id of terms of use
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Not authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /terms/:termsOfUseId/users/:userId:
+    delete:
+      tags:
+        - TermsOfUse
+      description: |
+        - Unsign a term of use for a user
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: termsOfUseId
+          description: The id of terms of use
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: userId
+          description: The id of user
+          required: true
+          schema:
+            type: number
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        401:
+          description: Not authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'  
   /terms/docusignViewURL:
     post:
       tags:
@@ -1029,6 +1252,41 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /terms/type:
+    get:
+      tags:
+        - TermsType
+      description: |
+        List all types of terms of uses.
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: number
+                    title:
+                      type: string
+        401:
+          description: Not authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+                  
 components:
   securitySchemes:
     bearerAuth:
